@@ -8,7 +8,6 @@ import static dev.langchain4j.internal.Utils.readBytes;
 import static dev.langchain4j.model.googleai.FunctionMapper.toToolExecutionRequests;
 import static dev.langchain4j.model.googleai.Json.fromJson;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 
 import dev.langchain4j.agent.tool.ToolExecutionRequest;
 import dev.langchain4j.data.image.Image;
@@ -26,6 +25,13 @@ import dev.langchain4j.data.message.VideoContent;
 import dev.langchain4j.data.pdf.PdfFile;
 import dev.langchain4j.exception.UnsupportedFeatureException;
 import dev.langchain4j.internal.CustomMimeTypesFileTypeDetector;
+import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiBlob;
+import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiCodeExecutionResult;
+import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiCodeExecutionResult.GeminiOutcome;
+import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiExecutableCode;
+import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiFileData;
+import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiFunctionCall;
+import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiFunctionResponse;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.Base64;
@@ -33,7 +39,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 
-class PartsAndContentsMapper {
+final class PartsAndContentsMapper {
+    private PartsAndContentsMapper() {}
 
     static final String THINKING_SIGNATURE_KEY =
             "thinking_signature"; // do not change, will break backward compatibility!
@@ -42,36 +49,30 @@ class PartsAndContentsMapper {
 
     private static final CustomMimeTypesFileTypeDetector mimeTypeDetector = new CustomMimeTypesFileTypeDetector();
 
-    static GeminiPart fromContentToGPart(Content content) {
+    static GeminiContent.GeminiPart fromContentToGPart(Content content) {
         if (content instanceof TextContent textContent) {
-            return GeminiPart.builder().text(textContent.text()).build();
+            return GeminiContent.GeminiPart.builder().text(textContent.text()).build();
         } else if (content instanceof ImageContent imageContent) {
             Image image = imageContent.image();
 
             if (!isNullOrBlank(image.base64Data())) {
-                return GeminiPart.builder()
-                        .inlineData(GeminiBlob.builder()
-                                .mimeType(image.mimeType())
-                                .data(image.base64Data())
-                                .build())
+                return GeminiContent.GeminiPart.builder()
+                        .inlineData(new GeminiBlob(image.mimeType(), image.base64Data()))
                         .build();
             } else if (image.url() != null) {
                 URI url = image.url();
                 if (url.getScheme() != null && url.getScheme().startsWith("http")) {
                     byte[] imageBytes = readBytes(url.toString());
                     String base64Data = Base64.getEncoder().encodeToString(imageBytes);
-                    return GeminiPart.builder()
-                            .inlineData(GeminiBlob.builder()
-                                    .mimeType(getOrDefault(image.mimeType(), mimeTypeDetector.probeContentType(url)))
-                                    .data(base64Data)
-                                    .build())
+                    return GeminiContent.GeminiPart.builder()
+                            .inlineData(new GeminiBlob(
+                                    getOrDefault(image.mimeType(), mimeTypeDetector.probeContentType(url)), base64Data))
                             .build();
                 } else {
-                    return GeminiPart.builder()
-                            .fileData(GeminiFileData.builder()
-                                    .fileUri(url.toString())
-                                    .mimeType(getOrDefault(image.mimeType(), mimeTypeDetector.probeContentType(url)))
-                                    .build())
+                    return GeminiContent.GeminiPart.builder()
+                            .fileData(new GeminiFileData(
+                                    getOrDefault(image.mimeType(), mimeTypeDetector.probeContentType(url)),
+                                    url.toString()))
                             .build();
                 }
             } else {
@@ -80,35 +81,27 @@ class PartsAndContentsMapper {
         } else if (content instanceof AudioContent audioContent) {
             URI uri = audioContent.audio().url();
             if (uri != null) {
-                return GeminiPart.builder()
-                        .fileData(GeminiFileData.builder()
-                                .fileUri(uri.toString())
-                                .mimeType(mimeTypeDetector.probeContentType(uri))
-                                .build())
+                return GeminiContent.GeminiPart.builder()
+                        .fileData(new GeminiFileData(mimeTypeDetector.probeContentType(uri), uri.toString()))
                         .build();
             } else {
-                return GeminiPart.builder()
-                        .inlineData(GeminiBlob.builder()
-                                .mimeType(audioContent.audio().mimeType())
-                                .data(audioContent.audio().base64Data())
-                                .build())
+                return GeminiContent.GeminiPart.builder()
+                        .inlineData(new GeminiBlob(
+                                audioContent.audio().mimeType(),
+                                audioContent.audio().base64Data()))
                         .build();
             }
         } else if (content instanceof VideoContent videoContent) {
             URI uri = videoContent.video().url();
             if (uri != null) {
-                return GeminiPart.builder()
-                        .fileData(GeminiFileData.builder()
-                                .fileUri(uri.toString())
-                                .mimeType(mimeTypeDetector.probeContentType(uri))
-                                .build())
+                return GeminiContent.GeminiPart.builder()
+                        .fileData(new GeminiFileData(mimeTypeDetector.probeContentType(uri), uri.toString()))
                         .build();
             } else {
-                return GeminiPart.builder()
-                        .inlineData(GeminiBlob.builder()
-                                .mimeType(videoContent.video().mimeType())
-                                .data(videoContent.video().base64Data())
-                                .build())
+                return GeminiContent.GeminiPart.builder()
+                        .inlineData(new GeminiBlob(
+                                videoContent.video().mimeType(),
+                                videoContent.video().base64Data()))
                         .build();
             }
         } else if (content instanceof PdfFileContent pdfFileContent) {
@@ -116,18 +109,12 @@ class PartsAndContentsMapper {
 
             URI uri = pdfFile.url();
             if (uri != null) {
-                return GeminiPart.builder()
-                        .fileData(GeminiFileData.builder()
-                                .fileUri(uri.toString())
-                                .mimeType(mimeTypeDetector.probeContentType(uri))
-                                .build())
+                return GeminiContent.GeminiPart.builder()
+                        .fileData(new GeminiFileData(mimeTypeDetector.probeContentType(uri), uri.toString()))
                         .build();
             } else {
-                return GeminiPart.builder()
-                        .inlineData(GeminiBlob.builder()
-                                .mimeType(pdfFile.mimeType())
-                                .data(pdfFile.base64Data())
-                                .build())
+                return GeminiContent.GeminiPart.builder()
+                        .inlineData(new GeminiBlob(pdfFile.mimeType(), pdfFile.base64Data()))
                         .build();
             }
         } else {
@@ -136,47 +123,48 @@ class PartsAndContentsMapper {
     }
 
     static AiMessage fromGPartsToAiMessage(
-            List<GeminiPart> parts, boolean includeCodeExecutionOutput, Boolean returnThinking) {
+            List<GeminiContent.GeminiPart> parts, boolean includeCodeExecutionOutput, Boolean returnThinking) {
 
-        List<GeminiPart> safeParts = Objects.requireNonNullElse(parts, List.of());
+        List<GeminiContent.GeminiPart> safeParts = Objects.requireNonNullElse(parts, List.of());
         StringBuilder fullText = new StringBuilder();
         List<String> thoughts = new ArrayList<>();
         List<String> thoughtSignatures = new ArrayList<>();
         List<GeminiFunctionCall> functionCalls = new ArrayList<>();
         List<Image> generatedImages = new ArrayList<>();
 
-        for (GeminiPart part : safeParts) {
-            GeminiExecutableCode executableCode = part.getExecutableCode();
+        for (GeminiContent.GeminiPart part : safeParts) {
+            GeminiExecutableCode executableCode = part.executableCode();
             if (executableCode != null && includeCodeExecutionOutput) {
                 fullText.append("Code executed:\n")
                         .append("```python")
                         .append(
-                                executableCode.getProgrammingLanguage() != null
+                                executableCode.programmingLanguage() != null
                                         ? // TODO check below why programming language is null
-                                        executableCode.getProgrammingLanguage().toString()
+                                        // TODO: Is this correct? This would result in: ```pythonpythonCODE```
+                                        executableCode.programmingLanguage().toString()
                                         : "")
-                        .append(executableCode.getCode())
+                        .append(executableCode.code())
                         .append("```\n");
             }
 
-            GeminiCodeExecutionResult codeExecutionResult = part.getCodeExecutionResult();
+            GeminiCodeExecutionResult codeExecutionResult = part.codeExecutionResult();
             if (codeExecutionResult != null && includeCodeExecutionOutput) {
-                GeminiOutcome outcome = codeExecutionResult.getOutcome();
+                GeminiOutcome outcome = codeExecutionResult.outcome();
 
                 if (outcome != GeminiOutcome.OUTCOME_OK) {
                     fullText.append("Code execution failed: **")
                             .append(outcome.name())
                             .append("**\n")
-                            .append(part.getText() != null ? part.getText() : "");
+                            .append(part.text() != null ? part.text() : "");
                 } else {
                     fullText.append("Output:\n")
                             .append("```\n")
-                            .append(codeExecutionResult.getOutput())
+                            .append(codeExecutionResult.output())
                             .append("```\n");
                 }
             }
 
-            String text = part.getText();
+            String text = part.text();
             if (isNotNullOrEmpty(text)) {
                 if (Boolean.TRUE.equals(part.isThought())) {
                     if (Boolean.TRUE.equals(returnThinking)) {
@@ -195,23 +183,23 @@ class PartsAndContentsMapper {
                 }
             }
 
-            String thoughtSignature = part.getThoughtSignature();
+            String thoughtSignature = part.thoughtSignature();
             if (Boolean.TRUE.equals(returnThinking) && isNotNullOrEmpty(thoughtSignature)) {
                 thoughtSignatures.add(thoughtSignature);
             }
 
-            if (part.getFunctionCall() != null) {
-                functionCalls.add(part.getFunctionCall());
+            if (part.functionCall() != null) {
+                functionCalls.add(part.functionCall());
             }
 
-            GeminiBlob inlineData = part.getInlineData();
+            GeminiBlob inlineData = part.inlineData();
             if (inlineData != null
-                    && inlineData.getMimeType() != null
-                    && inlineData.getMimeType().startsWith("image/")
-                    && inlineData.getData() != null) {
+                    && inlineData.mimeType() != null
+                    && inlineData.mimeType().startsWith("image/")
+                    && inlineData.data() != null) {
                 Image generatedImage = Image.builder()
-                        .base64Data(inlineData.getData())
-                        .mimeType(inlineData.getMimeType())
+                        .base64Data(inlineData.data())
+                        .mimeType(inlineData.mimeType())
                         .build();
                 generatedImages.add(generatedImage);
             }
@@ -246,36 +234,35 @@ class PartsAndContentsMapper {
                             SystemMessage systemMessage = (SystemMessage) msg;
 
                             if (systemInstruction != null) {
-                                systemInstruction.addPart(GeminiPart.builder()
+                                systemInstruction.addPart(GeminiContent.GeminiPart.builder()
                                         .text(systemMessage.text())
                                         .build());
                                 return null;
                             }
 
                             if (isNotNullOrEmpty(systemMessage.text())) {
-                                return GeminiContent.builder()
-                                        .role(GeminiRole.MODEL.toString())
-                                        .parts(List.of(GeminiPart.builder()
+                                return new GeminiContent(
+                                        List.of(GeminiContent.GeminiPart.builder()
                                                 .text(systemMessage.text())
-                                                .build()))
-                                        .build();
+                                                .build()),
+                                        GeminiRole.MODEL.toString());
                             }
 
                             return null;
                         case AI:
                             AiMessage aiMessage = (AiMessage) msg;
 
-                            List<GeminiPart> parts = new ArrayList<>();
+                            List<GeminiContent.GeminiPart> parts = new ArrayList<>();
 
                             if (sendThinking && isNotNullOrEmpty(aiMessage.thinking())) {
-                                parts.add(GeminiPart.builder()
+                                parts.add(GeminiContent.GeminiPart.builder()
                                         .text(aiMessage.thinking())
                                         .thought(true)
                                         .build());
                             }
 
                             if (isNotNullOrEmpty(aiMessage.text())) {
-                                parts.add(GeminiPart.builder()
+                                parts.add(GeminiContent.GeminiPart.builder()
                                         .text(aiMessage.text())
                                         .build());
                             }
@@ -288,51 +275,43 @@ class PartsAndContentsMapper {
                                 parts.addAll(toGeminiParts(aiMessage.toolExecutionRequests(), thoughtSignature));
                             }
 
-                            return GeminiContent.builder()
-                                    .role(GeminiRole.MODEL.toString())
-                                    .parts(parts)
-                                    .build();
+                            return new GeminiContent(parts, GeminiRole.MODEL.toString());
 
                         case USER:
                             UserMessage userMessage = (UserMessage) msg;
 
-                            return GeminiContent.builder()
-                                    .role(GeminiRole.USER.toString())
-                                    .parts(userMessage.contents().stream()
+                            return new GeminiContent(
+                                    userMessage.contents().stream()
                                             .map(PartsAndContentsMapper::fromContentToGPart)
-                                            .collect(toList()))
-                                    .build();
+                                            .toList(),
+                                    GeminiRole.USER.toString());
                         case TOOL_EXECUTION_RESULT:
                             ToolExecutionResultMessage toolResultMessage = (ToolExecutionResultMessage) msg;
 
-                            return GeminiContent.builder()
-                                    .role(GeminiRole.USER.toString())
-                                    .parts(List.of(GeminiPart.builder()
-                                            .functionResponse(GeminiFunctionResponse.builder()
-                                                    .name(toolResultMessage.toolName())
-                                                    .response(Map.of("response", toolResultMessage.text()))
-                                                    .build())
-                                            .build()))
-                                    .build();
+                            return new GeminiContent(
+                                    List.of(GeminiContent.GeminiPart.builder()
+                                            .functionResponse(new GeminiFunctionResponse(
+                                                    toolResultMessage.toolName(),
+                                                    Map.of("response", toolResultMessage.text())))
+                                            .build()),
+                                    GeminiRole.USER.toString());
                         default:
                             return null;
                     }
                 })
                 .filter(Objects::nonNull)
-                .collect(toList());
+                .toList();
     }
 
-    private static List<GeminiPart> toGeminiParts(
+    private static List<GeminiContent.GeminiPart> toGeminiParts(
             List<ToolExecutionRequest> toolExecutionRequests, String thoughtSignature) {
-        List<GeminiPart> geminiParts = new ArrayList<>();
+        List<GeminiContent.GeminiPart> geminiParts = new ArrayList<>();
         for (int i = 0; i < toolExecutionRequests.size(); i++) {
             ToolExecutionRequest toolExecutionRequest = toolExecutionRequests.get(i);
             boolean shouldAddThoughtSignature = i == 0 && isNotNullOrEmpty(thoughtSignature);
-            GeminiPart geminiPart = GeminiPart.builder()
-                    .functionCall(GeminiFunctionCall.builder()
-                            .name(toolExecutionRequest.name())
-                            .args(fromJson(toolExecutionRequest.arguments(), Map.class))
-                            .build())
+            GeminiContent.GeminiPart geminiPart = GeminiContent.GeminiPart.builder()
+                    .functionCall(new GeminiFunctionCall(
+                            toolExecutionRequest.name(), fromJson(toolExecutionRequest.arguments(), Map.class)))
                     .thoughtSignature(shouldAddThoughtSignature ? thoughtSignature : null)
                     .build();
             geminiParts.add(geminiPart);
